# ndk-samples

audio-echo/app/src/main/cpp/: debug_utils.cpp
camera/basic/src/main/java/com/sample/camera/basic/: CameraActivity.java
endless-tunnel/: README.md
endless-tunnel/app/src/main/cpp/: ascii_to_geom.cpp  native_engine.cpp  shader.cpp  vertexbuf.cpp  vertexbuf.hpp
exceptions/app/src/main/cpp/: exception_helper.cpp
gles3jni/: README.md
gles3jni/app/src/main/assets/cordinate/: predict_vox.npy  slice_0.csv  slice_2.csv  slice_3.csv  slice_4.csv  slice_5.csv  slice_6.csv  slice_7.csv
gles3jni/app/src/main/cpp/: CMakeLists.txt  camera.h  gles3jni.cpp  gles3jni.h  shader_m.h
gles3jni/app/src/main/java/com/android/gles3jni/: GLES3JNIActivity.java  GLES3JNILib.java
hello-gl2/: README.md
hello-gl2/app/src/main/: AndroidManifest.xml
hello-gl2/app/src/main/cpp/: CMakeLists.txt  ComputeShaderParticles.cpp  ComputeShaderParticles.h  config.h  gl_code.cpp
hello-gl2/app/src/main/java/com/android/gl2jni/: GL2JNIView.java
hello-jniCallback/app/src/main/cpp/: hello-jnicallback.c
orderfile/: README.md
san-angeles/app/src/main/cpp/: app-win32.c.org
teapots/choreographer-30fps/src/main/cpp/: TeapotRenderer.cpp
teapots/classic-teapot/src/main/cpp/: TeapotRenderer.cpp
teapots/common/ndk_helper/: JNIHelper.cpp  interpolator.cpp
teapots/image-decoder/src/main/cpp/: TeapotRenderer.cpp
teapots/more-teapots/src/main/cpp/: MoreTeapotsRenderer.cpp
teapots/textured-teapot/src/main/cpp/: TeapotRenderer.cpp
